[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["dni <dni@b1tco1n.org>"]
readme = "README.rst"
# packages = [{include = "b1tco1n-saas"}]

[tool.poetry.scripts]
serve = "webapp.server:start"
debug = "webapp.server:debug"
check = "webapp.developer:check"

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.40.0"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
PyYAML = "^6.0"
SQLAlchemy = "^1.4.41"
requests = {extras = ["stub"], version = "^2.28.1"}
fastapi-login = "^1.8.2"
python-multipart = "^0.0.5"
bcrypt = "^4.0.1"
Jinja2 = "^3.1.2"
random-username = "^1.0.2"
python-gitlab = "^3.10.0"
sqlalchemy-stubs = "^0.4"
isort = "^5.10.1"
websockets = "^10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
black = "^22.10.0"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
